# pytorch-template-code

./: README.md  pyproject.toml
configs/: config.yaml
configs/datasets/: imagenet.yaml
configs/models/: resnet18.yaml
scripts/: train.py
src/: runner.py  trainer.py
src/datasets/: dummy.py
src/losses/: generic.py
src/models/: model.py
src/utils/: dist.py  env.py
